--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "4.3.0",
     "bootstrap": "^4.6.0",
+    "bootstrap-select": "^1.13.18",
     "jquery": "^3.6.0",
     "mapbox-gl": "^2.1.1",
     "mapbox-gl-geocoder": "^2.0.1",
