--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "mapbox-gl": "^2.1.1",
     "mapbox-gl-geocoder": "^2.0.1",
     "popper.js": "^1.16.1",
+    "timeago": "^1.6.7",
     "turbolinks": "^5.2.0"
   },
   "version": "0.1.0",
